--- a/style.css
+++ b/style.css
@@ -3,10 +3,20 @@ body {
 	background-color: #092a33;
 	font-family: sans-serif;
 	text-align: center;
+	list-style: inside;
+}
+
+body header, footer {
+	background-color: #03222a;
+	padding: 20px;
 }
 
 body header {
-	background-color: #03222a;
+	font-family: "Trebuchet MS",sans-serif;
+}
+
+body footer {
+	margin-top: 20px;
 }
 
 body header .name {
@@ -17,6 +27,41 @@ body header .description {
 	font-size: 1.5em;
 }
 
-body main {
+div.spacey {
 	margin: 20px;
+}
+
+div.never {
+	border-style: solid;
+	border-width: 1px;
+	border-color: white;
+}
+
+div.contents-left {
+	margin: 20px;
+	text-align: left;
+	width: 50%;
+	display: inline-block;
+}
+
+div.center-contents {
+	text-align: center;
+	width: 100%;
+}
+
+img {
+	margin: 20px;
+}
+
+a {
+	font-size: 1.25em;
+	font-weight: bold;
+}
+
+a:hover {
+	color: magenta;
+}
+
+.center {
+	text-align: center;
 }
