--- a/css/oceanwp.css
+++ b/css/oceanwp.css
@@ -8314,3 +8314,7 @@ h1 {
 .page-header{background-color:white}
 
 .big-bottom{margin-bottom:70px}
+
+.resume-heading{margin-bottom:35px}
+
+section {margin-bottom:70px}
