Replace freelance links with portfolio links.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -103,9 +103,8 @@
 							<div class="rtc-itw-holder">
 								<div class="rtw-itw-inner-holder">
 									<div class="text-holder">
-										<h4 class="widget-title">Freelance Developer</h4>
+										<h4 class="widget-title">Portfolio Projects</h4>
 										<div class="content">
-											<p>I am available for hire on these top freelance sites</p>
 										</div>
 									</div>
 								</div>
@@ -115,20 +114,20 @@
 							<div class="gallery gallery-columns-3 gallery-size-large">
 								<figure class="gallery-item">
 									<div class="gallery-icon">
-										<a href="https://upwork.com"><img src="/images/upwork-icon.svg" class="attachment-large size-large"></a>
-										<figcaption class="wp-caption-text gallery-caption">Upwork</figcaption>
+										<a href="/discography"><img src="/images/cd_8bit.webp" class="portfolio-icon attachment-large size-large">
+										<figcaption class="wp-caption-text gallery-caption">Complete Discography</figcaption></a>
 									</div>
 								</figure>
 								<figure class="gallery-item">
 									<div class="gallery-icon">
-										<a href="https://fiverr.com"><img src="/images/fiverr-icon.svg" class="attachment-large size-large"></a>
-										<figcaption class="wp-caption-text gallery-caption">Fiverr</figcaption>
+										<a href="/stock-chart"><img src="/images/stock_chart_125.png" class="portfolio-icon attachment-large size-large">
+										<figcaption class="wp-caption-text gallery-caption">Real-Time Stock Chart</figcaption></a>
 									</div>
 								</figure>
 								<figure class="gallery-item">
 									<div class="gallery-icon">
-										<a href="https://peopleperhour.com"><img src="/images/people_per_hour_logo.png" class="attachment-large size-large" width="70"></a>
-										<figcaption class="wp-caption-text gallery-caption">People Per Hour</figcaption>
+										<a href="/climate-eyes"><img src="/images/weather.png" class="portfolio-icon attachment-large size-large">
+										<figcaption class="wp-caption-text gallery-caption">Climate Eyes</figcaption></a>
 									</div>
 								</figure>
 							</div>
@@ -144,7 +143,7 @@
 				<div id="footer-bottom" class="no-footer-nav">
 					<div id="footer-bottom-inner" class="container">
 						<div id="copyright">
-							Copyright &copy; 2020 Daniel Lovette
+							Copyright &copy; {{ site.time | date: '%Y' }} Daniel Lovette
 						</div>
 					</div>
 
