Add Sparks React project.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -114,6 +114,12 @@
 							<div class="gallery gallery-columns-3 gallery-size-large">
 								<figure class="gallery-item">
 									<div class="gallery-icon">
+										<a href="/sparks-react"><img src="/images/fireworks_128.png" class="portfolio-icon attachment-large size-large">
+										<figcaption class="wp-caption-text gallery-caption">Sparks React</figcaption></a>
+									</div>
+								</figure>
+								<figure class="gallery-item">
+									<div class="gallery-icon">
 										<a href="/discography"><img src="/images/cd_8bit.webp" class="portfolio-icon attachment-large size-large">
 										<figcaption class="wp-caption-text gallery-caption">Complete Discography</figcaption></a>
 									</div>
