Change Sparks React to Sparks Spring.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -114,8 +114,8 @@
 							<div class="gallery gallery-columns-3 gallery-size-large">
 								<figure class="gallery-item">
 									<div class="gallery-icon">
-										<a href="/sparks-react"><img src="/images/fireworks_128.png" class="portfolio-icon attachment-large size-large">
-										<figcaption class="wp-caption-text gallery-caption">Sparks React</figcaption></a>
+										<a href="/sparks-spring"><img src="/images/fireworks_128.png" class="portfolio-icon attachment-large size-large">
+										<figcaption class="wp-caption-text gallery-caption">Sparks Spring</figcaption></a>
 									</div>
 								</figure>
 								<figure class="gallery-item">
